feat(vercel): move config

--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -6,7 +6,7 @@
     },
     {
       "source": "/:match*",
-      "destination": "https://turbo-repo-example-web.vercel.app/"
+      "destination": "/"
     }
   ]
 }
